--- a/package.json
+++ b/package.json
@@ -15,6 +15,16 @@
     "jade": "~1.3.0",
     "less-middleware": "1.0.x",
     "mongoose": "*",
-    "passport": "*"
+    "passport": "*",
+    "passport-local": "*",
+    "underscore": "*",
+    "express-session": "*",
+    "connect-flash": "*",
+    "bcrypt-nodejs": "*"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-mocha": "^0.4.10",
+    "grunt-mocha-test": "^0.10.2"
   }
 }
