--- a/package.json
+++ b/package.json
@@ -20,11 +20,18 @@
     "underscore": "*",
     "express-session": "*",
     "connect-flash": "*",
-    "bcrypt-nodejs": "*"
+    "bcrypt-nodejs": "*",
+    "q": "*",
+    "lodash-node": "*",
+    "mongodb": "^1.4.8"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "*",
     "grunt-mocha": "^0.4.10",
-    "grunt-mocha-test": "^0.10.2"
+    "grunt-mocha-test": "^0.10.2",
+    "chai": "*",
+    "expect.js": "^0.3.1",
+    "grunt-shell": "^1.0.1"
   }
 }
